src/test/testFiles/invalid/semanticErrors/undeclaredFunctionForwardDeclaration.manimdsl
fun func1(x: number) {
    let y: Stack<number> = new Stack<number>();
    y = func2(5);

}

func1(5);